fix jenky circle pie chart overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,21 @@ body,
   font-family: 'Inter', sans-serif;
   background-color: #1f2026
 }
+
+/* modify the entire white default  scrollbar on the application */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #1f2026;
+}
+
+
+::-webkit-scrollbar-thumb {
+  background: #515257;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #515257;
+}
